# AutoCrunchCoder

./: .gitignore  AGENTS.md  Aider_system_prompts.md  Aider_system_promts.md  CODEMAP.md  FeatureChecklist.md  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_bonus.txt  setup_tree_sitter.py  test_tree_sitter.py
Maxima/: README.md  my_functions.mac  test_maxima.mac
config/: LLMs.toml  LLMs.yaml  README.md
cpp/: ForceFields.cpp  LJ.cpp  README.md  Vec2.h  Vec3.h  Vec4.h
doc/: Doxygen.md  How_To_Maxima.md  LLMs.md  MCP_Deepseek.md  MCP_Gemini.md  MCP_Maxima.md  MCP_Perplexity.md  OpenCLBase.md  ctags.md  math_expansion_rules.md  maxima_advanced_simplify.wxmx  maxima_examples.wxmx  my_functions.mac  ollama_from_LMstudio.md  test_maxima.mac  tests.md  tools.md
docs/: Code_Sprawl_Cleanup_discussion.md  NumIntegrationCL.md  PDF_an_article_tools_discusion.md  cpp_analyzer_status.md  cpp_analyzer_test_plan.md  dependency_graph_analyzer.md  paperdb_user_guide.md  pipelines_tutorial.md  pyCruncher_vs_pyCruncher2.md  python_analyzer_status.md  python_type_analyzer.md  repo_mapper_tutorial.md  setup_Database_SQL.md  tools_for_pdf_science_articles.md
examples/: README.md
molecule_renderer/: README.md  index.html  molecule.js  moleculeRenderer.js  renderer.js  sceneSetup.js  selectionManager.js  server.py  utility.js
paperdb/: SKILL.md  __init__.py  cli.py  config.py  mcp.py  paths.py
paperdb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
prokop-bot/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
(+289 files in other folders)
